# aulafpga

./: .gitignore  README.md
Aula03092025/Projetos_PISO/: piso.vhd  piso_shift.vcd  run_simular_piso_shift.bat  tb_piso_shift.vhd  work-obj93.cf
Aula03092025/Projetos_PisoCircular/: piso.vcd  piso.vhd  simular_piso.bat  tb_piso_shift.vhd
Aula03092025/Projetos_Shift_Register_SIPO/: run_simular_shift_register_sipo.bat  shift_register_sipo.vhd  shift_sipo.vcd  tb_shift_sipo.vhd  tb_shift_sipo_2.vhd
Aula03092025/Projetos_Updown_Counter/: run_simular_updown_counter.bat  tb_updown_counter.vhd  updown_counter.vcd  updown_counter.vhd
AulaPratica30092025/: TopExemplo.sv  top_ex1.sv
AulaPratica30092025/BlinkNormalcomPortas/Arquivos/: blinknormalcomportas.lpf  blinknormalcomportas.sv
AulaPratica30092025/InterfaceFPGA_1/src/: tarefa_display_word6.c
AulaPratica30092025/InterfaceFPGA_2/: CMakeLists.txt
AulaPratica30092025/InterfaceFPGA_2/src/: CMakeLists.txt  tarefa_botao_joy.c
AulaPratica30092025/InterfaceFPGA_3/: CMakeLists.txt
AulaPratica30092025/InterfaceFPGA_3/inc/: buffer_sensor.h  leitura.h  sensores.h  tarefa_oled_ax.h  tarefa_oled_ay.h
AulaPratica30092025/InterfaceFPGA_3/src/: CMakeLists.txt  tarefa_botao_a.c  tarefa_botao_b.c  tarefa_botao_joy.c  tarefa_display_word6.c  tarefa_led_verde.c
AulaPratica_02102025/BlinkNormalContador/Arquivos/: blinknormalcontador.lpf  blinknormalcontador.sv
AulaPratica_02102025/BlinkNormalContador/InterfaceFPGA_8/: CMakeLists.txt
AulaPratica_02102025/BlinkNormalContador/InterfaceFPGA_9/: CMakeLists.txt
AulaPratica_02102025/BlinkNormalFull/Arquivos/: blinknormalfull.lpf  blinknormalfull.sv
AulaPratica_02102025/BlinkNormalFull/Projeto/: .recovery  Projeto.ldf
AulaPratica_02102025/BlinkNormalcomControle/Arquivos/: blinknormalcomcontrole.sv
AulaPratica_02102025/BlinkNormalcomControle/Projeto/: Projeto.ldf  promote.xml  reportview.xml
AulaPratica_02102025/BlinkNormalcomNove/Arquivos/: blinknormalcomnove.sv
AulaPratica_02102025/BlinkNormalcomNove/Projeto/: Projeto.ldf  promote.xml  reportview.xml
AulaPratica_14102025/InterfaceEntrada_9bits/: CMakeLists.txt
AulaPratica_14102025/InterfaceEntrada_9bits/src/: CMakeLists.txt  tarefa_botao_joy.c  tarefa_display_word6.c  tarefa_word6.c
AulaPratica_14102025/InterfaceSaida_9bits/: CMakeLists.txt
AulaPratica_14102025/InterfaceSaida_9bits/src/: CMakeLists.txt  main.c  tarefa_botao_a.c  tarefa_botao_b.c
AulaPratica_14102025/InterfaceSaida_Chave/: CMakeLists.txt
AulaPratica_14102025/InterfaceSaida_Chave/src/: CMakeLists.txt  main.c  main_back.c  tarefa_botao_a.c  tarefa_botao_b.c  tarefa_botao_joy.c  tarefa_display_chave.c  tarefa_joystick_eventos.c  tarefa_led_verde.c  tarefa_onda_quadrada.c  tarefa_onda_quadrada_pura.c  tarefa_pulso_gpio.c
AulaPratica_16102025/IntefaceEntradaBCD_Full/: CMakeLists.txt
Aula_09092025/: .Pinagem.lpf (2).un~  Pinagem (2).lpf
Aula_09092025/Aula_Contador_6bits/: Contador_6bits (2).bat
Aula_Pratica_1/Blink_Externo/InterfaceFPGA_4/src/: CMakeLists.txt  main.c  tarefa_onda_quadrada.c
Aula_Pratica_1/Blink_Full/InterfaceFPGA_5/src/: CMakeLists.txt  main.c
EDA_Playground/Exemplo1_wire_reg_logic/: comb_with_wire.sv  design.sv  dff_with_logic.sv  mux_reg_with_legacy.sv  testbench.sv
EDA_Playground/Exemplo2_Register_bank/: design.sv  register_bank.sv  testbench.sv
EDA_Playground/Exemplo3_Fila_Queue/: design.sv  print_queue.sv  testbench.sv
EDA_Playground/Exemplo4_Pixel_Struct/: design.sv  pixel_image.sv  testbench.sv
EDA_Playground/Exemplo5_Semaforo_FSM/: design.sv  testbench.sv  traffic_light.sv
blink_VERILOG/: blink.bat  blink.v
blink_VHDL/: blink.bat  blink.ldf  promote.xml  reportview.xml
blink_VHDL/Arquivos/: blink.lpf  blink.vhd
blink_VHDL/blink_tcr.dir/: pn250902114054.tcr
blink_VHDL/impl1/: .build_status  blink_impl1.alt  blink_impl1.areasrr  blink_impl1.bgn  blink_impl1.bit  blink_impl1.edi  blink_impl1.htm  blink_impl1.mrp  blink_impl1.ngd  blink_impl1.ngo  blink_impl1.par  blink_impl1.prf  blink_impl1.srd  blink_impl1.srf  blink_impl1.srm  blink_impl1.srr.db  blink_impl1.twr  blink_impl1_bgn.html  blink_impl1_cck.rpt  blink_impl1_map.asd  blink_impl1_map.cam  blink_impl1_map.hrr  blink_impl1_map.ncd  blink_impl1_mrp.html  blink_impl1_pad.html  blink_impl1_par.html  blink_impl1_scck.rpt  blink_impl1_summary.html  blink_impl1_synplify.html  blink_impl1_synplify.tcl  blink_impl1_trce.asd  blink_impl1_twr.html  hdla_gen_hierarchy.html  message.xml  run_options.txt  scratchproject.prs  synlog.tcl  syntax.log.db
tarefa3/: onda.vcd  tarefa3.vhd  tarefa3_TB.vhd  work-obj93.cf
tarefa_maquina_estado/: fsm_porta.vhd  tb_fsm_porta.vhd  work-obj93.cf
trefa5/: flipflop_d.vhdl  registrador_8bits.vhdl  run.bat  tb_registrador_8bits.vcd  tb_registrador_8bits.vhd
trfavhdl3/: run.bat  tb_tr.vcd  tb_tr.vhd  tr.vhd
(+740 files in other folders)
